refactor(Backend): Lombok RequiredArgsConstructor, List.of() shorthand + Misc Tweaks